# mini_agent

./: .gitignore  README.md  exceptions.py  interfaces.py  pyproject.toml
agent/: __init__.py  hooks.py  loop.py  state.py
config/: __init__.py
demo_repo/: README.md  app.py  calculator.py
docs/: ARCHITECTURE.md
environment/: __init__.py  local.py
eval/: tasks.py
models/: __init__.py  deterministic.py  litellm_client.py
principles/: __init__.py  chunker.py  embeddings.py  extractor.py  jsonl.py  loaders.py  memory_store.py  schema.py  vector_store.py  verifier.py
prompts/: __init__.py  templates.py
run/: cli.py
scripts/: __init__.py  build_principle_memory.py  extract_principles.py  ingest_corpus.py  verify_principles.py
tests/: test_agent_loop.py  test_environment_tools.py  test_models_and_trajectory.py  test_principle_memory.py  test_principle_verifier.py  test_principles_pipeline.py
tools/: __init__.py  base.py  builtins.py  registry.py
trajectory/: __init__.py  store.py
utils/: __init__.py  logging.py  merge.py
