[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-agent"
version = "0.1.0"
description = "A miniature coding agent inspired by mini-SWE-agent."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["litellm>=1.75.5"]

[project.scripts]
run = "run.cli:main"

[tool.setuptools]
packages = ["agent", "config", "environment", "eval", "models", "prompts", "run", "tools", "trajectory", "utils"]
